data/derived/sp14/progs/unify/prog2627.ml.out
Characters 146-147:
  ( ((c + x' + x'') / 10), ((c + x' + x'') mod 10) ) :: a
                                                        ^
Error: This expression has type int * 'a
       but an expression was expected of type (int * int) list
